Disable __resolveType insertion in augmentResolvers
The autogeneration blocks the implementation of custom `__resolveType`
implementations on types, which for some use cases is essential.

(note, this commit was updated to remove errant formatting 'fixes' by
Prettier JS)

--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
     "@babel/runtime-corejs2": "^7.5.5",
     "apollo-server-errors": "^2.4.1",
     "debug": "^4.1.1",
-    "graphql-auth-directives": "^2.2.1",
-    "lodash": "^4.17.19",
-    "neo4j-driver": "^4.2.1",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2"
+    "graphql-auth-directives": "^2.2.1",
+    "graphql-tools": "^7.0.2",
+    "lodash": "^4.17.19",
+    "neo4j-driver": "^4.2.1"
   },
   "ava": {
     "require": [
